[package]
name = "editor-ui"
description = "Editor-focused UI entrypoints for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
app-ui = { workspace = true, default-features = false, features = ["editor-shell"] }
app-assets.workspace = true
editor-text-engine.workspace = true
gpui.workspace = true
gpui-component.workspace = true
rust-i18n.workspace = true
