# GENERATED / maintained by scripts/sync_editor_from_upstream.ps1
# Nested workspace for vendored editor engine crates.

[workspace]
resolver = "2"
members = [
    "agent_settings",
    "askpass",
    "assets",
    "auto_update",
    "auto_update_helper",
    "breadcrumbs",
    "buffer_diff",
    "clock",
    "cloud_api_client",
    "cloud_api_types",
    "cloud_llm_client",
    "collections",
    "component",
    "context_server",
    "credentials_provider",
    "dap",
    "edit_prediction_types",
    "editor",
    "env_var",
    "extension",
    "feature_flags",
    "feature_flags_macros",
    "file_icons",
    "fs",
    "fuzzy",
    "fuzzy_nucleo",
    "git",
    "git_hosting_providers",
    "gpui_shared_string",
    "gpui_tokio",
    "gpui_util",
    "grammars",
    "http_client",
    "http_client_tls",
    "icons",
    "language",
    "language_core",
    "language_model",
    "language_model_core",
    "lsp",
    "markdown",
    "menu",
    "migrator",
    "multi_buffer",
    "net",
    "node_runtime",
    "oauth_callback_server",
    "paths",
    "perf",
    "prettier",
    "project",
    "proto",
    "refineable",
    "release_channel",
    "remote",
    "remote_connection",
    "rope",
    "rpc",
    "session",
    "settings",
    "settings_content",
    "settings_json",
    "settings_macros",
    "snippet",
    "snippet_provider",
    "sqlez",
    "sqlez_macros",
    "sum_tree",
    "syntax_theme",
    "task",
    "telemetry",
    "telemetry_events",
    "terminal",
    "text",
    "theme",
    "theme_settings",
    "ui",
    "ui_input",
    "ui_macros",
    "util",
    "util_macros",
    "vim_mode_setting",
    "watch",
    "windows_resources",
    "workspace",
    "worktree",
    "zed_actions",
    "zed_credentials_provider",
    "zed_env_vars",
    "zeta_prompt",
    "zlog",
    "ztracing",
    "ztracing_macro",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]

#
# Workspace member crates
#

acp_tools = { path = "acp_tools" }
acp_thread = { path = "acp_thread" }
action_log = { path = "action_log" }
activity_indicator = { path = "activity_indicator" }
agent = { path = "agent" }
agent_servers = { path = "agent_servers" }
agent_settings = { path = "agent_settings" }
agent_skills = { path = "agent_skills" }
agent_ui = { path = "agent_ui" }
ai_onboarding = { path = "ai_onboarding" }
anthropic = { path = "anthropic" }
askpass = { path = "askpass" }
assets = { path = "assets" }
audio = { path = "audio" }
auto_update = { path = "auto_update" }
auto_update_ui = { path = "auto_update_ui" }
aws_http_client = { path = "aws_http_client" }
bedrock = { path = "bedrock" }
breadcrumbs = { path = "breadcrumbs" }
buffer_diff = { path = "buffer_diff" }
call = { path = "call" }
channel = { path = "channel" }
cli = { path = "cli" }
client = { path = "client" }
clock = { path = "clock" }
cloud_api_client = { path = "cloud_api_client" }
cloud_api_types = { path = "cloud_api_types" }
cloud_llm_client = { path = "cloud_llm_client" }
collab = { path = "collab" }
collab_ui = { path = "collab_ui" }
collections = { path = "collections", version = "0.1.0" }
command_palette = { path = "command_palette" }
command_palette_hooks = { path = "command_palette_hooks" }
compliance = { path = "compliance" }
component = { path = "component" }
component_preview = { path = "component_preview" }
console = "0.16"
context_server = { path = "context_server" }
copilot = { path = "copilot" }
copilot_chat = { path = "copilot_chat" }
copilot_ui = { path = "copilot_ui" }
crashes = { path = "crashes" }
credentials_provider = { path = "credentials_provider" }
crossbeam = "0.8.4"
csv_preview = { path = "csv_preview"}
dap = { path = "dap" }
dap_adapters = { path = "dap_adapters" }
db = { path = "db" }
debug_adapter_extension = { path = "debug_adapter_extension" }
debugger_tools = { path = "debugger_tools" }
debugger_ui = { path = "debugger_ui" }
deepseek = { path = "deepseek" }
derive_refineable = { path = "refineable/derive_refineable" }
dev_container = { path = "dev_container" }
diagnostics = { path = "diagnostics" }
dialoguer = { version = "0.12", default-features = false }
editor = { path = "editor" }
encoding_selector = { path = "encoding_selector" }
env_var = { path = "env_var" }
etw_tracing = { path = "etw_tracing" }
eval_utils = { path = "eval_utils" }
extension = { path = "extension" }
extension_host = { path = "extension_host" }
extensions_ui = { path = "extensions_ui" }
feature_flags = { path = "feature_flags" }
feature_flags_macros = { path = "feature_flags_macros" }
feedback = { path = "feedback" }
file_finder = { path = "file_finder" }
file_icons = { path = "file_icons" }
fs = { path = "fs" }
fuzzy = { path = "fuzzy" }
fuzzy_nucleo = { path = "fuzzy_nucleo" }
git = { path = "git" }
git_graph = { path = "git_graph" }
git_hosting_providers = { path = "git_hosting_providers" }
git_ui = { path = "git_ui" }
go_to_line = { path = "go_to_line" }
google_ai = { path = "google_ai" }
grammars = { path = "grammars" }
gpui = { git = "https://github.com/zed-industries/zed", default-features = false }
gpui_shared_string = { git = "https://github.com/zed-industries/zed", package = "gpui_shared_string" }
gpui_linux = { path = "gpui_linux", default-features = false }
gpui_macos = { path = "gpui_macos", default-features = false }
gpui_macros = { git = "https://github.com/zed-industries/zed", package = "gpui_macros" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", default-features = false }
gpui_web = { path = "gpui_web" }
gpui_wgpu = { path = "gpui_wgpu" }
gpui_windows = { path = "gpui_windows", default-features = false }
gpui_tokio = { path = "gpui_tokio" }
gpui_util = { path = "gpui_util" }
html_to_markdown = { path = "html_to_markdown" }
http_client = { git = "https://github.com/zed-industries/zed", package = "http_client" }
http_client_tls = { path = "http_client_tls" }
icons = { path = "icons" }
image_viewer = { path = "image_viewer" }
edit_prediction_types = { path = "edit_prediction_types" }
edit_prediction_ui = { path = "edit_prediction_ui" }
edit_prediction_context = { path = "edit_prediction_context" }
input_latency_ui = { path = "input_latency_ui" }
inspector_ui = { path = "inspector_ui" }
install_cli = { path = "install_cli" }
journal = { path = "journal" }
json_schema_store = { path = "json_schema_store" }
keymap_editor = { path = "keymap_editor" }
language = { path = "language" }
language_core = { path = "language_core" }
language_extension = { path = "language_extension" }
language_model = { path = "language_model" }
language_model_core = { path = "language_model_core" }
language_models = { path = "language_models" }
language_models_cloud = { path = "language_models_cloud" }
language_onboarding = { path = "language_onboarding" }
language_selector = { path = "language_selector" }
language_tools = { path = "language_tools" }
languages = { path = "languages" }
line_ending_selector = { path = "line_ending_selector" }
livekit_api = { path = "livekit_api" }
livekit_client = { path = "livekit_client" }
lmstudio = { path = "lmstudio" }
lsp = { path = "lsp" }
markdown = { path = "markdown" }
markdown_preview = { path = "markdown_preview" }
svg_preview = { path = "svg_preview" }
media = { path = "media" }
menu = { path = "menu" }
mermaid-rs-renderer = { git = "https://github.com/zed-industries/mermaid-rs-renderer", rev = "782b89a7da3f0e91e51f98d00a93acba679be6fb", default-features = false }
migrator = { path = "migrator" }
mistral = { path = "mistral" }
multi_buffer = { path = "multi_buffer" }
miniprofiler_ui = { path = "miniprofiler_ui" }
nc = { path = "nc" }
net = { path = "net" }
node_runtime = { path = "node_runtime" }
notifications = { path = "notifications" }
oauth_callback_server = { path = "oauth_callback_server" }
ollama = { path = "ollama" }
onboarding = { path = "onboarding" }
opencode = { path = "opencode" }
open_ai = { path = "open_ai" }
open_path_prompt = { path = "open_path_prompt" }
open_router = { path = "open_router", features = ["schemars"] }
outline = { path = "outline" }
outline_panel = { path = "outline_panel" }
panel = { path = "panel" }
paths = { path = "paths" }
perf = { path = "perf" }
picker = { path = "picker" }
prettier = { path = "prettier" }
settings_profile_selector = { path = "settings_profile_selector" }
project = { path = "project" }
project_panel = { path = "project_panel" }
project_symbols = { path = "project_symbols" }
prompt_store = { path = "prompt_store" }
proto = { path = "proto" }
recent_projects = { path = "recent_projects" }
refineable = { git = "https://github.com/zed-industries/zed", package = "refineable" }
release_channel = { path = "release_channel" }
remote = { path = "remote" }
remote_connection = { path = "remote_connection" }
remote_server = { path = "remote_server" }
repl = { path = "repl" }
reqwest_client = { path = "reqwest_client" }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "e50e726ddd0292f6ef9de0dda6b90af4ed1fb66a", features = ["wav", "playback", "wav_output", "recording"] }
rope = { path = "rope" }
rpc = { path = "rpc" }
rules_library = { path = "rules_library" }
scheduler = { path = "scheduler" }
search = { path = "search" }
session = { path = "session" }
sidebar = { path = "sidebar" }
settings = { path = "settings" }
settings_content = { path = "settings_content" }
settings_json = { path = "settings_json" }
settings_macros = { path = "settings_macros" }
settings_ui = { path = "settings_ui" }
shell_command_parser = { path = "shell_command_parser" }
snippet = { path = "snippet" }
snippet_provider = { path = "snippet_provider" }
snippets_ui = { path = "snippets_ui" }
sqlez = { path = "sqlez" }
sqlez_macros = { path = "sqlez_macros" }
streaming_diff = { path = "streaming_diff" }
sum_tree = { path = "sum_tree" }
codestral = { path = "codestral" }
system_specs = { path = "system_specs" }
syntax_theme = { path = "syntax_theme" }
tab_switcher = { path = "tab_switcher" }
task = { path = "task" }
tasks_ui = { path = "tasks_ui" }
telemetry = { path = "telemetry" }
telemetry_events = { path = "telemetry_events" }
terminal = { path = "terminal" }
terminal_view = { path = "terminal_view" }
text = { path = "text" }
theme = { path = "theme" }
theme_extension = { path = "theme_extension" }
theme_settings = { path = "theme_settings" }
theme_selector = { path = "theme_selector" }
time_format = { path = "time_format" }
platform_title_bar = { path = "platform_title_bar" }
title_bar = { path = "title_bar" }
toolchain_selector = { path = "toolchain_selector" }
ui = { path = "ui" }
ui_input = { path = "ui_input" }
ui_macros = { path = "ui_macros" }
ui_prompt = { path = "ui_prompt" }
util = { path = "util" }
util_macros = { path = "util_macros" }
vim = { path = "vim" }
vim_mode_setting = { path = "vim_mode_setting" }
which_key = { path = "which_key" }

watch = { path = "watch" }
web_search = { path = "web_search" }
web_search_providers = { path = "web_search_providers" }
workspace = { path = "workspace" }
worktree = { path = "worktree" }
x_ai = { path = "x_ai" }
zed = { path = "zed" }
zed_actions = { path = "zed_actions" }
zed_credentials_provider = { path = "zed_credentials_provider" }
zed_env_vars = { path = "zed_env_vars" }
edit_prediction = { path = "edit_prediction" }
edit_prediction_metrics = { path = "edit_prediction_metrics" }
zeta_prompt = { path = "zeta_prompt" }
zlog = { path = "zlog" }
zlog_settings = { path = "zlog_settings" }
ztracing = { path = "ztracing" }
ztracing_macro = { path = "ztracing_macro" }

#
# External crates
#

agent-client-protocol = { version = "=0.12.1", features = ["unstable"] }
aho-corasick = "1.1"
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4" }
any_vec = "0.14"
anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compat = "0.2.1"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-dispatcher = "0.1"
async-fs = "2.1"
async-io = "2.6.0"
async-lock = "3.4.2"
async-pipe = { git = "https://github.com/zed-industries/async-pipe-rs", rev = "82d00a04211cf4e1236029aa03e6b6ce2a74c553" }
async-recursion = "1.0.0"
async-tar = "0.5.1"
async-task = "4.7"
async-trait = "0.1"
async-tungstenite = "0.31.0"
async-process = "2.5.0"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.8", features = [
    "hardcoded-credentials",
] }
aws-sdk-bedrockruntime = { version = "1.112.0", features = [
    "behavior-version-latest",
] }
aws-smithy-runtime-api = { version = "1.9.2", features = ["http-1x", "client"] }
aws-smithy-types = { version = "1.3.4", features = ["http-body-1-x"] }
backtrace = "0.3"
base64 = "0.22"
bitflags = "2.6.0"
brotli = "8.0.2"
bytes = "1.0"
cargo_metadata = "0.19"
cargo_toml = "0.21"
brush-parser = "0.3"
cfg-if = "1.0.3"
chardetng = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
circular-buffer = "1.0"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
const_format = "0.2"
convert_case = "0.8.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
cpal = "0.17"
crash-handler = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "0.4.0"
dap-types = { git = "https://github.com/zed-industries/dap-types", rev = "1b461b310481d01e02b2603c16d7144b926339f8" }
dashmap = "6.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
documented = "0.9.1"
dotenvy = "0.15.0"
dunce = "1.0"
ec4rs = "1.1"
emojis = "0.6.1"
env_logger = "0.11"
encoding_rs = "0.8"
exec = "0.3.1"
fancy-regex = "0.17.0"
fork = "0.4.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
gh-workflow = { git = "https://github.com/zed-industries/gh-workflow", rev = "37f3c0575d379c218a9c455ee67585184e40d43f" }
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
heapless = "0.9.2"
handlebars = "4.3"
heck = "0.5"
hdrhistogram = "7"
heed = { version = "0.21.0", features = ["read-txn-no-tls"] }
hex = "0.4.3"
human_bytes = "0.4.1"
html5ever = "0.27.0"
http = "1.1"
http-body = "1.0"
ignore = "0.4.22"
image = "0.25.1"
imara-diff = "0.1.8"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
json_dotpath = "1.1"
jsonschema = "0.37.0"
jsonwebtoken = "10.0"
jupyter-protocol = "1.4.0"
jupyter-websocket-client = "1.1.0"
libc = "0.2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
linkify = "0.10.0"
libwebrtc = "0.3.26"
livekit = { version = "0.7.32", features = ["tokio", "rustls-tls-native-roots"] }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
lsp-types = { git = "https://github.com/zed-industries/lsp-types", rev = "f4dfa89a21ca35cd929b70354b1583fabae325f8" }
mach2 = "0.5"
markup5ever_rcdom = "0.3.0"
metal = "0.33"
minidumper = "0.9"
moka = { version = "0.12.10", features = ["sync"] }
nanoid = "0.4"
nbformat = "1.2.0"
nix = "0.29"
nucleo = "0.5"
num-format = "0.4.4"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = [ "NSGraphics" ] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
open = "5.0.0"
ordered-float = "2.1.1"
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
partial-json-fixer = "0.5.3"
parse_int = "0.9"
pciid-parser = "0.8.0"
pathdiff = "0.2"
percent-encoding = "2.3.2"
pet = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-conda = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-core = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-fs = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-poetry = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-reporter = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-virtualenv = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
portable-pty = "0.9.0"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
# replace this with main when #635 is merged
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest-derive = "0.8.0"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
pollster = "0.4.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
quick-xml = "0.38"
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
# WARNING: If you change this, you must also publish a new version of zed-reqwest to crates.io
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rsa = "0.9.6"
runtimelib = { version = "1.4.0", default-features = false, features = [
    "async-dispatcher-runtime", "aws-lc-rs"
] }
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
# WARNING: If you change this, you must also publish a new version of zed-scap to crates.io
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_yaml_ng = "0.10"
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_path_to_error = "0.1.17"
serde_urlencoded = "0.7"
sha2 = "0.10"
shellexpand = "3.1"
shlex = "1.3.0"
simplelog = "0.12.2"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
sqlformat = "0.2"
stacksafe = "0.1"
streaming-iterator = "0.1"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
sys-locale = "0.3.1"
sysinfo = "0.37.0"
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3", features = [
    "macros",
    "parsing",
    "serde",
    "serde-well-known",
    "formatting",
    "local-offset",
] }
tiny_http = "0.12"
tokio = { version = "1" }
tokio-socks = { version = "0.5.2", default-features = false, features = [
    "futures-io",
    "tokio",
] }
toml = "0.8"
toml_edit = { version = "0.22", default-features = false, features = [
    "display",
    "parse",
    "serde",
] }
tower-http = "0.4.4"
tree-sitter = { version = "0.26.8", features = ["wasm"] }
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5cb9b693cfd7bfacab1d9ff4acac1a4150700609" }
tree-sitter-css = "0.23"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-gitcommit = { git = "https://github.com/zed-industries/tree-sitter-git-commit", rev = "88309716a69dd13ab83443721ba6e0b491d37ee9" }
tree-sitter-go = "0.25"
tree-sitter-go-mod = { git = "https://github.com/camdencheek/tree-sitter-go-mod", rev = "2e886870578eeba1927a2dc4bd2e2b3f598c5f9a", package = "tree-sitter-gomod" }
tree-sitter-gowork = { git = "https://github.com/zed-industries/tree-sitter-go-work", rev = "acb0617bf7f4fda02c6217676cc64acb89536dc7" }
tree-sitter-heex = { git = "https://github.com/zed-industries/tree-sitter-heex", rev = "1dd45142fbb05562e35b2040c6129c9bca346592" }
tree-sitter-html = "0.23"
tree-sitter-jsdoc = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "9a23c1a96c0513d8fc6520972beedd419a973539" }
tree-sitter-python = "0.25"
tree-sitter-regex = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = { git = "https://github.com/zed-industries/tree-sitter-typescript", rev = "e2c53597d6a5d9cf7bbe8dccde576fe1e46c5899" } # https://github.com/tree-sitter/tree-sitter-typescript/pull/347
tree-sitter-yaml = { git = "https://github.com/zed-industries/tree-sitter-yaml", rev = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a" }
tracing = "0.1.40"
unicase = "2.6"
unicode-script = "0.5.7"
unicode-segmentation = "1.10"
unicode-width = "0.2"
unindent = "0.2.0"
url = "2.2"
urlencoding = "2.1.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"
wasm-encoder = "0.221"
wasmparser = "0.221"
wasmtime = { version = "36", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "36"
wax = "0.7"
which = "6.0.0"
wasm-bindgen = "0.2.120"
web-time = "1.1.0"
webrtc-sys = "0.3.23"
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
windows-core = "0.61"
yaml-rust2 = "0.8"
yawc = "0.2.5"
zeroize = "1.8"
zstd = "0.11"


[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]


[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

# We currently do not restrict any style rules
# as it slows down shipping code to Zed.
#
# Running ./script/clippy can take several minutes, and so it's
# common to skip that step and let CI do it. Any unexpected failures
# (which also take minutes to discover) thus require switching back
# to an old branch, manual fixing, and re-pushing.
#
# In the future we could improve this by either making sure
# Zed can surface clippy errors in diagnostics (in addition to the
# rust-analyzer errors), or by having CI fix style nits automatically.
style = { level = "allow", priority = -1 }

# Individual rules that have violations in the codebase:
type_complexity = "allow"
let_underscore_future = "allow"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"

# Boolean expressions can be hard to read, requiring only the minimal form gets in the way
nonminimal_bool = "allow"


