[package]
name = "files-app"
description = "CyberFiles application entrypoint"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "cyber_files"
path = "src/main.rs"
required-features = ["full-app"]

[features]
default = ["full-app"]
full-app = ["dep:files-ui"]

[dependencies]
files-core.workspace = true
files-ui = { workspace = true, features = ["full-app"], optional = true }
gpui_platform.workspace = true

[target.'cfg(windows)'.dependencies]
app-platform-windows.workspace = true

[build-dependencies]
embed-resource.workspace = true
