[package]
name = "files-core"
description = "Shared constants and config for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
rolling-file.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "config_formats_bench"
required-features = ["config_bench"]

[features]
config_bench = ["dep:ron", "dep:bincode", "dep:postcard"]

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[dependencies.postcard]
version = "1"
features = ["alloc"]
optional = true
