[package]
name = "files-ui"
description = "GPUI shell and views for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["full-app"]
full-app = []
editor-shell = []

[dependencies]
anyhow.workspace = true
app-media.workspace = true
app-ui = { workspace = true, features = ["full-app"] }
chrono.workspace = true
files-commands.workspace = true
files-core.workspace = true
files-fs.workspace = true
app-platform-windows.workspace = true
editor-text-engine.workspace = true
gpui.workspace = true
raw-window-handle = "0.6"
gpui-component.workspace = true
app-assets.workspace = true
rfd.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale.workspace = true
schemars = "1.2"
image = "0.25"
smallvec = "1"
tracing.workspace = true
rodio = { version = "0.19", default-features = false }
