[package]
name = "cyber-desktop-fs"
description = "Filesystem model and local enumeration for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
cyber-desktop-core.workspace = true
unicode-width.workspace = true
zip = "2.2"

[target.'cfg(windows)'.dependencies]
cyber-desktop-platform-windows.workspace = true
flume = "0.11"
lnk = "0.6"
notify = "8.2"
trash = { version = "5.2", default-features = false, features = ["coinit_multithreaded"] }
