[package]
name = "markdown-preview-engine"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
app-ui = { path = "../app-ui" }
app-assets = { path = "../app-assets" }

[lints]
workspace = true
