[package]
name = "markdown-preview-ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
markdown-preview-engine = { path = "../markdown-preview-engine" }
app-ui = { path = "../app-ui" }

[lints]
workspace = true
