[package]
name = "media-player-ui"
description = "GPUI views for Cyber Media Player"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["full-app"]
full-app = []

[dependencies]
anyhow.workspace = true
app-assets.workspace = true
app-mpv-ffi.workspace = true
app-ui = { workspace = true, features = ["full-app"] }
files-core.workspace = true
directories = "5"
gpui.workspace = true
gpui-component.workspace = true
gpui_platform.workspace = true
raw-window-handle = "0.6"
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Media_Audio", "Win32_System_Com", "Win32_Media_Multimedia"] }
rustfft = "6.2"
