[package]
name = "cyberfiles-text-engine"
description = "High-performance text editing engine (rope buffer, encoding-aware loading) for CyberEditor"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
ropey = "1.6"
encoding_rs = "0.8"
chardetng = "0.1"
memmap2 = "0.9"
regex = "1"
memchr = { version = "2", default-features = false, features = ["std"] }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.24"
tree-sitter-bash = "0.23"

[dev-dependencies]
tempfile = "3"
