[package]
name = "cyber-desktop-text-engine"
description = "High-performance text editing engine for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
ropey = "1.6"
encoding_rs = "0.8"
chardetng = "0.1"
memmap2 = "0.9"
regex = "1"
memchr = { version = "2", default-features = false, features = ["std"] }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-astro-next = "0.1.1"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cmake = "0.7"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-diff = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-jsdoc = "0.23"
tree-sitter-json = "0.24"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-lua = "0.4"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-proto = "0.2"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-svelte-next = "0.1.1"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.1"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "replace_all_bench"
path = "examples/replace_all_bench.rs"
