[package]
name = "cyberfiles-ui-editor"
description = "Editor-focused UI entrypoints for CyberEditor"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
cyberfiles-ui = { workspace = true, default-features = false, features = ["editor-shell"] }
gpui.workspace = true
