[package]
name = "cyber-desktop-ui-editor"
description = "Editor-focused UI entrypoints for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
cyber-desktop-ui = { workspace = true, default-features = false, features = ["editor-shell"] }
cyber-desktop-assets.workspace = true
cyber-desktop-text-engine.workspace = true
gpui.workspace = true
gpui-component.workspace = true
rust-i18n.workspace = true
