[package]
name = "cyber-desktop-ui"
description = "GPUI shell and views for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["full-app"]
full-app = []
editor-shell = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cyber-desktop-commands.workspace = true
cyber-desktop-core.workspace = true
cyber-desktop-fs.workspace = true
cyber-desktop-platform-windows.workspace = true
cyber-desktop-text-engine.workspace = true
gpui.workspace = true
gpui-component.workspace = true
cyber-desktop-assets.workspace = true
rfd.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale.workspace = true
schemars = "1.2"
smallvec = "1"
