[package]
name = "agent_settings"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/agent_settings.rs"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
collections.workspace = true
convert_case.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
language_model.workspace = true
log.workspace = true
project.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
util.workspace = true

