[package]
name = "db"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/db.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
gpui.workspace = true
indoc.workspace = true
inventory.workspace = true
log.workspace = true
paths.workspace = true
release_channel.workspace = true
sqlez.workspace = true
sqlez_macros.workspace = true
util.workspace = true
uuid.workspace = true
zed_env_vars.workspace = true

