[package]
name = "editor"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/editor.rs"
doctest = false

[features]
# Opt-in per product: cybereditor enables only `project-integration` until Phase 4 removes it.
default = []
# Full IDE: workspace UI + collab client + breadcrumbs.
project-integration = [
    "project-buffer",
    "workspace-minimal",
    "dep:breadcrumbs",
    "dep:client",
]
# Buffer/editing against a worktree without workspace shell (Notepad++ / cybereditor).
project-buffer = ["dep:project"]
# Workspace UI without collab client in the link graph (blocked until workspace builds with collab-runtime off).
workspace-minimal = ["dep:workspace"]
project-ide-shell = ["project/ide-shell"]
project-remote-debug = ["project/remote-debug"]
test-support = [
    "project-integration",
    "text/test-support",
    "language/test-support",
    "gpui/test-support",
    "multi_buffer/test-support",
    "project/test-support",
    "theme/test-support",
    "util/test-support",
    "workspace/test-support",
    "tree-sitter-c",
    "tree-sitter-rust",
    "tree-sitter-typescript",
    "tree-sitter-html",
    "proptest",
    "unindent",
]

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
assets.workspace = true
base64.workspace = true
breadcrumbs = { workspace = true, optional = true }
client = { workspace = true, optional = true }
clock.workspace = true
collections.workspace = true
convert_case.workspace = true
db.workspace = true
buffer_diff.workspace = true
emojis.workspace = true
feature_flags.workspace = true
file_icons.workspace = true
futures.workspace = true
futures-lite.workspace = true
fuzzy.workspace = true
fs.workspace = true
git.workspace = true
gpui.workspace = true
indoc.workspace = true
edit_prediction_types.workspace = true
itertools.workspace = true
language.workspace = true
linkify.workspace = true
log.workspace = true
lsp.workspace = true
markdown.workspace = true
menu.workspace = true
multi_buffer.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
pretty_assertions.workspace = true
project = { workspace = true, optional = true, default-features = false }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand.workspace = true
regex.workspace = true
rpc.workspace = true
rope.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smallvec.workspace = true
snippet.workspace = true
sum_tree.workspace = true
task.workspace = true
text.workspace = true
time.workspace = true
theme.workspace = true
theme_settings.workspace = true
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
ztracing.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
unicode-script.workspace = true
unindent = { workspace = true, optional = true }
ui.workspace = true
ui_input.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true
vim_mode_setting.workspace = true
workspace = { workspace = true, optional = true, default-features = false, features = ["collab-runtime"] }
zed_actions.workspace = true
zlog.workspace = true

[[bench]]
name = "editor_render"
harness = false

[[bench]]
name = "display_map"
harness = false
