[package]
name = "extension"
version = "0.1.0"
edition = "2024"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/extension.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cloud_api_types.workspace = true
collections.workspace = true
dap.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
heck.workspace = true
http_client.workspace = true
language.workspace = true
log.workspace = true
lsp.workspace = true
parking_lot.workspace = true
proto.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
task.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
util.workspace = true
wasm-encoder.workspace = true
wasmparser.workspace = true
ztracing.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing"]
